Changed album name to album title. Corrections on swagger mapping.
