# src/main/scala/com/music/api/model/entities/types/Album.scala
@@ -1,3 +1,3 @@
 package com.music.api.model.entities.types
 
-case class Album(uuid: Option[String], name: String, releaseDate: Option[String])
+case class Album(uuid: Option[String], title: String, releaseDate: Option[String])
